<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">dParking</string>
    <string name="settings">Hobespenak</string>
    <string name="not_connected">Konexiorik gabe</string>
    <string name="loading">Kargatzen…</string>
    <string name="list">Zerrenda</string>
    <string name="map">Mapa</string>
    <string name="language">Hizkuntza</string>
    <string name="contact">Kontaktua</string>
    <string name="tarifa">Tarifa</string>
    <string name="tramo">Tartea</string>
    <string name="precio">Prezioa</string>
    <string name="calcular_gasto">Prezioa kalkulatu</string>
    <string name="minutos">Minutu</string>
    <string name="navigate">Nabigatu</string>
    <string name="directions">Nola iritsi…</string>
    <string name="about">Honi buruz…</string>
    <string name="license">Lizentzia</string>
    <string name="code">Kodea</string>
    <string name="counter">Kontagailua</string>
    <string name="start">Hasi</string>
    <string name="stop">Gelditu</string>
    <string name="counting_stop">Zenbatzen… Gelditu</string>
    <string name="time">Denbora: </string>
    <string name="x_euro">%1$s €</string>
    <string name="x_min">%1$s min</string>
    <string name="ireki">Ireki</string>
    <string name="itxi">itxi</string>
    <string name="counter_notice">Sakatu Hasi botoia kotxea aparkatzean. Itzuli pantaila honetara denbora eta kostu akumulatua ikusteko edozein momentutan.</string>
    <string name="menu">Menua</string>
    <string name="version">Bertsioa</string>
</resources>
