<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:dp="http://schemas.android.com/apk/res/net.sareweb.android.dParking"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- The main content view -->

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <!-- The navigation drawer -->

    <LinearLayout
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#CCC"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:orientation="vertical"
        android:paddingLeft="10dp" >

        <net.sareweb.android.dParking.custom.DashboardButton_
            android:id="@+id/btnParking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            dp:buttonText="@string/list"
            dp:imgResId="@drawable/list" />

        <net.sareweb.android.dParking.custom.DashboardButton_
            android:id="@+id/btnMap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            dp:buttonText="@string/map"
            dp:imgResId="@drawable/world" />

        <net.sareweb.android.dParking.custom.DashboardButton_
            android:id="@+id/btnCounter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            dp:buttonText="@string/counter"
            dp:imgResId="@drawable/conta" />

        <net.sareweb.android.dParking.custom.DashboardButton_
            android:id="@+id/btnSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            dp:buttonText="@string/settings"
            dp:imgResId="@drawable/settings" />
        
        <net.sareweb.android.dParking.custom.DashboardButton_
            android:id="@+id/btnAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            dp:buttonText="@string/about"
            dp:imgResId="@drawable/about" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp" >

            <com.google.android.gms.plus.PlusOneButton
                xmlns:plus="http://schemas.android.com/apk/lib/com.google.android.gms.plus"
                android:id="@+id/plus_one_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                plus:annotation="inline"
                plus:size="tall" />
        </LinearLayout>
    </LinearLayout>

</android.support.v4.widget.DrawerLayout>